[package]
name = "lnd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
bitcoind = "0.34.0"
electrsd = "0.26.0"
electrum-client = "0.18.0"
env_logger = "0.10.1"
hex = "0.4.3"
log = "0.4.20"
nix = { version = "0.27.1", features = ["signal"] }
tokio = { version = "1.35.0", features = ["full"] }
which = "5.0.0"
tonic_lnd = { version = "*", git = "https://github.com/Synota-io/tonic_lnd.git" }
