[package]
name = "lnd"
version = "0.1.3"
edition = "2021"
description = "Utility to run a regtest lnd process connected to a given bitcoind instance, useful in integration testing environment."
homepage = "https://github.com/bennyhodl/lnd-test-util"
license = "MIT"

[features]
default = []
download = ["bitcoin_hashes", "zip", "minreq"]

lnd_0_17_3 = ["download"]
lnd_0_16_4 = ["download"]

[build-dependencies]
bitcoin_hashes = { version = "0.12", optional = true }
zip = { version = "0.6", default-features = false, optional = true, features = [
  "bzip2",
  "deflate",
] }
minreq = { version = "2.9.0", default-features = false, optional = true, features = [
  "https",
] }

[dependencies]
async-recursion = "1.0.5"
bitcoind = "0.34.1"
electrsd = "0.26.0"
electrum-client = "0.18.0"
env_logger = "0.10.1"
hex = "0.4.3"
log = "0.4.20"
nix = { version = "0.27.1", features = ["signal"] }
tokio = { version = "1.35.0", features = ["full"] }
which = "5.0.0"
tonic_lnd = { version = "0.5.0", git = "https://github.com/Synota-io/tonic_lnd.git", branch = "master" }
