[package]
name = "lnd"
version = "0.1.5"
edition = "2021"
description = "Utility to run a regtest lnd process connected to a given bitcoind instance, useful in integration testing environment."
repository = "https://github.com/bennyhodl/lnd-test-util"
license = "MIT"

[features]
default = ["bitcoind"]
bitcoind = ["dep:bitcoind"]
download = ["bitcoin_hashes", "tar", "flate2", "minreq"]

lnd_0_17_5 = ["download"]
lnd_0_16_4 = ["download"]

[build-dependencies]
bitcoin_hashes = { version = "0.12", optional = true }
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }
minreq = { version = "2.9.0", default-features = false, optional = true, features = [
    "https",
] }

[dependencies]
anyhow = "1"
async-recursion = "1.0.5"
bitcoind = { version = "0.34.2", optional = true }
env_logger = "0.10.1"
hex = "0.4.3"
log = "0.4.20"
nix = { version = "0.27.1", features = ["signal"] }
tokio = { version = "1.35.0", features = ["full"] }
which = "5.0.0"
tonic_lnd = { version = "0.5.0", git = "https://github.com/Synota-io/tonic_lnd.git", branch = "master" }
